apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  selector:
    app: vaultwarden
  type: LoadBalancer
  ports:
  - name: web-ui
    port: 80
    targetPort: 4235
    protocol: TCP
