apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-public
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - bitwarden.theorangeserver.net
    - vaultwarden.theorangeserver.net
  rules:
  - host: bitwarden.theorangeserver.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
  - host: vaultwarden.theorangeserver.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
